Fixing some UX issues that were evident on mobile in the contribute modal.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -233,11 +233,12 @@ nav span a img {
     color: blueviolet !important;
 }
 
-#help {
-    font-size: 12px;
+#discord-for-help {
+    font-size: 18px;
+    padding: 8px;
 }
 
-#help a {
+#discord-for-help a {
     color: rgb(166, 199, 213);
 }
 
@@ -627,16 +628,16 @@ main {
     color: #d9d8d8;
     background-color: transparent;
     border-radius: 5px;
+    padding-top: 1em;
     display: none;
 }
 
 #combine-contribution-div label {
-    font-size: 10px;
+    font-size: 15px;
     font-family: monospace;
     font-weight: bold;
 
 }
-
 
 #min-preset {
     border-radius: 5px;
@@ -763,15 +764,15 @@ td > a {
 #artifact-warning {
     display: none;
     border: 2px solid black;
-    background-color: dimgray;
+    background-color: #85434DFF;
     color: white;
     padding: 5px;
 }
 
 #combine-epsilon-warning {
     display: none;
-    border: 2px solid whie;
-    background-color: darkred;
+    border: 2px solid black;
+    background-color: #85434DFF;
     color: white;
     padding: 5px;
 }
@@ -1040,7 +1041,7 @@ p {
 }
 
 
-#download-modal .modal-footer {
+#download-modal .modal-footer{
     /* the buttons don't overflow on mobile and are centered */
     display: flex;
     flex-wrap: wrap;
@@ -1048,7 +1049,7 @@ p {
     justify-content: center;
 }
 
-.modal-footer {
+.modal-footer, #contribute-modal .modal-body {
     display: flex;
     flex-shrink: 0;
     flex-wrap: wrap;
@@ -1065,7 +1066,6 @@ p {
     /* add vertical space, so that when the buttons get wrapped on mobile, there is a vertical spacing between them. */
     margin-bottom: 10px;
 }
-
 
 .btn-primary {
     background-color: black !important;
